# KRepo---Personal-Project

./: .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  docker-compose.yml  package-lock.json  package.json  pyrightconfig.json  tsconfig.json
.claude/: settings.local.json
app/: server.ts
app/integrations/ingest/: directoryIngest.ts
app/integrations/restapiconnections/: jira.ts  slack.ts
app/pdfparsing/input/: llamaparse.py
audiozoomdata/input/: test.m4a
audiozoomdata/mp3extraction/: audiotranscriptor.py
backend/: .env.example  .onboarding_tasks.json  db.py  main.py  pyproject.toml  railway.toml  requirements.txt  settings.py
backend/.tasks/: 218513cc-99d3-4528-b0dd-e7dc124ff504.json  dabba7fb-4bdb-45ca-9089-a6ce92433dc1.json  f2e97f98-2049-4105-bd87-167450f434f9.json
backend/alembic/: env.py
backend/alembic/versions/: 2d69d1e8f46f_add_integration_connections_table.py  666932ec0d6f_add_document_chunks_table_with_pgvector.py  d27d86df8e02_initial_schema_with_firebase_auth.py  f097c9ef23a1_add_conversations_and_chat_messages_.py
backend/auth/: dependencies.py  firebase.py  jwt.py  models.py  router.py  schemas.py
backend/chat/: models.py  router.py
backend/integrations/: __init__.py  base.py  encryption.py  github.py  google_drive.py  jira.py  models.py  notion.py  oauth.py  rate_limiter.py  router.py
backend/onboarding/: router.py
backend/parsing/: audio_transcriber.py  ingest.py  pdf_parser.py
backend/rag/: documents.py  github_router.py  ingest.py  models.py  retriever.py  router.py
data/mp3extraction/: audiotranscriptor.py
frontend/: .env  .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  tsconfig.json
frontend/src/: App.css  App.jsx  App.tsx  index.css  router.jsx  router.tsx
frontend/src/components/: Chat.jsx  Chat.tsx  DashboardLayout.jsx  (+29 more)
(+23 files in other folders)
