[project]
name = "krepo-backend"
version = "0.1.0"
description = "KRepo - Knowledge Repository Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "requests",
    "llama-cloud",
    "langchain",
    "langchain-anthropic",
    "pydantic-settings>=2.13.1",
    "pgvector>=0.3.6",
    "langchain-text-splitters>=0.3",
    "beautifulsoup4>=4.14.3",
    "fastembed>=0.7.4",
    "pypdf>=6.7.5",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "firebase-admin>=6.0",
    "psycopg2-binary>=2.9.11",
    "cryptography>=46.0.5",
]

[dependency-groups]
dev = [
    "basedpyright",
    "pre-commit",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
